# MimirProperties

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.debug.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
deployment/: example.env
deployment/dev/: Dockerfile  docker-compose.yml  start.sh
deployment/prod/: Dockerfile
src/listing/application/interface/: listing_config.py
src/listing/application/interfaces/: listing_config.py
src/listing/infrastructure/: olx.py  otodom.py
src/mimir/: manage.py
src/mimir/mimir/: asgi.py  settings.py  urls.py  wsgi.py
src/mimir/web_app/: asgi.py  manage.py  settings.py
src/mimir/web_app/administration/: forms.py  urls.py
src/mimir/web_app/administration/scraper/: views.py
src/mimir/web_app/infrastructure/: models.py
src/mimir/web_app/infrastructure/repositories/models/: __init__.py  address.py  base.py  listing.py  plot.py  price_history.py  property.py  user.py
src/mimir/web_app/infrastructure/repositories/models/migrations/: 0001_initial.py  (+1 more)
src/mimir/web_app/main/: asgi.py  settings.py  urls.py  wsgi.py
src/mimir/web_app/main/management/commands/: create_admin.py
src/mimir/web_app/templates/account/: login.html
src/mimir/web_app/templates/admin/: base.html  listing_services.html
src/scraper/application/interfaces/: __init__.py  scraper.py
src/scraper/infrastructure/: bs4_scraper.py
src/shared/: enums.py  http_engines.py
src/shared/dto/: __init__.py  http.py  listing.py
src/shared/types/: http.py
src/shared/value_objects/: __init__.py  parsers.py  timeout.py
src/shared/value_objects/listing_service/: http_requests.py  listings.py
tests/: .test.env 
tests/administration/commands/: test_create_admin_command.py
tests/shared/: test_enums.py  test_http_engines.py
