[tool.poetry]
name = "mimir"
version = "0.1.0"
description = ""
authors = ["Tobiasz <tobiasz0889@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"
mypy = "^0.991"
django-stubs = "^1.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py311']
